Bugfix: Removed extra padding

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,6 +1,6 @@
 :root {
   --background: radial-gradient(53.56% 53.56% at 50% 0%, #4a195b 0%, #320e3f 100%);
-  --layout-max-width: 1152px;
+  --layout-max-width: 1128px;
   --layout-min-width: 280px;
   --secondary-color: #00FFC2;
 }
